--- a/css/index.css
+++ b/css/index.css
@@ -206,28 +206,26 @@ display: flex;
     width: 500px;
     margin: 0 auto;
   }
-  /* .box div  {
-    flex-direction: column;
-    width: 100%;
-    justify-content: space-evenly;
-  } */
+  .img-bar {
+    margin-right: 70px;
+  }
   .inside-box {
     flex-direction: column;
     justify-content: center;
   }
-  .inside-box div{
-    display: flex;
-    
-    
-  }
   .inside-box div a {
     width: 500px;
     height: 40px;
+    display: flex;
     justify-content: center;
+  }
+  .section2 {
+    margin-right: 120px;
   }
 
   a {
     border: 1px solid grey;
+    color: grey;
   }
   .top-content {
    flex-direction: column;
